--- a/PRG282_Student_Management_System/PRG282_Student_Management_System.csproj
+++ b/PRG282_Student_Management_System/PRG282_Student_Management_System.csproj
@@ -100,5 +100,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Users\Pictures\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Users\Users.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
