--- a/PRG282_Student_Management_System/PRG282_Student_Management_System.csproj
+++ b/PRG282_Student_Management_System/PRG282_Student_Management_System.csproj
@@ -47,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BusinessLogicLayer\InputValidation.cs" />
+    <Compile Include="BusinessLogicLayer\StudentData.cs" />
+    <Compile Include="PresentationLayer\ViewStudents.cs" />
     <Compile Include="DataLayer\FileHandler.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -61,6 +63,7 @@
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="PresentationLayer\UserInput.cs" />
+    <Compile Include="PresentationLayer\ViewSummary.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Register.cs">
