Fixed file path issue

--- a/PRG282_Student_Management_System/PRG282_Student_Management_System.csproj
+++ b/PRG282_Student_Management_System/PRG282_Student_Management_System.csproj
@@ -103,6 +103,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Users\pictures\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Users\Users.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
