--- a/PRG282_Student_Management_System/PRG282_Student_Management_System.csproj
+++ b/PRG282_Student_Management_System/PRG282_Student_Management_System.csproj
@@ -47,7 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BusinessLogicLayer\InputValidation.cs" />
-    <Compile Include="BusinessLogicLayer\StudentData.cs" />
+    <Compile Include="DataLayer\StudentData.cs" />
     <Compile Include="PresentationLayer\ViewStudents.cs" />
     <Compile Include="DataLayer\FileHandler.cs" />
     <Compile Include="Form1.cs">
