Busy with the update and seach

--- a/PRG282_Student_Management_System/PRG282_Student_Management_System.csproj
+++ b/PRG282_Student_Management_System/PRG282_Student_Management_System.csproj
@@ -107,6 +107,7 @@
     <Folder Include="Users\pictures\" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Students\students.txt" />
     <Content Include="Users\Users.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
